plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.0'
	id 'io.spring.dependency-management' version '1.1.5'
	id 'org.openjfx.javafxplugin' version '0.0.13'
	id 'application'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	implementation 'org.openjfx:javafx-controls:17.0.10'
	implementation 'org.openjfx:javafx-fxml:17.0.10'
	implementation 'commons-io:commons-io:2.11.0'
	implementation 'org.apache.httpcomponents:httpclient:4.5.13'
	implementation 'com.google.code.gson:gson:2.8.9'
	implementation 'jakarta.persistence:jakarta.persistence-api:2.2.3'
}
javafx {
	version = "17.0.10"
	modules = [ 'javafx.controls', 'javafx.fxml' ]
}
application {
	mainClassName = 'com.example.javaquizzapp.JavaQuizzAppApplication'
	applicationDefaultJvmArgs = [
			'--module-path', '/Users/nataliajanda/Documents/javafx-sdk-17.0.11/lib',
			'--add-modules', 'javafx.controls,javafx.fxml'
	]
}

tasks.named('test') {
	useJUnitPlatform()
}

